Add additional GDPR-related translations and descriptions in de-DE.com_gdpr.ini

--- a/language/de-DE.com_gdpr.ini
+++ b/language/de-DE.com_gdpr.ini
@@ -17,6 +17,13 @@ COM_GDPR_NO_COOKIE_IN_THIS_CATEGORY="Keine Cookies in dieser Kategorie"
 COM_GDPR_NO_DOMAINS_IN_THIS_CATEGORY="Keine Domains in dieser Kategorie"
 COM_GDPR_NO_SERVICES_IN_THIS_CATEGORY="Keine Dienste in dieser Kategorie"
 COM_GDPR_CONSENT_ACCEPTED_DATE="Akzeptiert am: %s"
+COM_GDPR_JOOMLA_SESSION_COOKIE_DESCRIPTION="Dies ist ein rein technisches, zufällig generiertes Cookie, das zur Verfolgung der aktuellen Sitzung dient und keine Zustimmung erfordert"
+COM_GDPR_JOOMLA_SESSION_COOKIE_EXPIRATION="Sitzung"
+COM_GDPR_COOKIE_EXPIRATION="<span class='cc-cookie-domain-description-title'>Ablauf:</span> <span class='cc-cookie-domain-description-value'>%s</span>"
+COM_GDPR_COOKIE_SETTINGS="Cookie Einstellungen"
+COM_GDPR_COOKIE_DOMAIN_TYPE="<span class='cc-cookie-domain-description-title'>Typ:</span> <span class='cc-cookie-domain-description-value'>%s</span>"
+COM_GDPR_COOKIE_TYPE_VALUE="Cookie"
+COM_GDPR_DOMAIN_TYPE_VALUE="Ressource"
 
 ; Com_privacy
 PLG_SYSTEM_PRIVACYCONSENT_SUBJECT="Datenschutzerklärung"
@@ -105,3 +112,15 @@ COM_GDPR_LOGS_NA="-"
 COM_GDPR_CONSENTS_REGISTRY_URL_ALL_PAGES="Alle Seiten"
 COM_GDPR_USER_REVOKED_CONSENT_SUBJECT="Ein Nutzer hat seine Zustimmung auf %s zurückgezogen."
 COM_GDPR_USER_REVOKED_CONSENT_MSG="Ein Nutzer hat seine vorherige Zustimmung zurückgezogen. Unten finden Sie weitere Informationen über die Zustimmung und den Nutzer: <br /><br /><div><b>URL: </b>%s</div><div><b>Zustimmungs ID/Formular ID: </b>%s</div><div><b>Nutzer Informationen: </b>%s</div><div><b>Datum der Zustimmung: </b>%s</div><div><b>Zurückgezogen am: </b>%s</div><div><b>Formular Daten: </b>%s</div><br /><br /><hr>Diese Nachricht wurde automatisch generiert."
+
+; Types of items
+COM_GDPR_SELECT_TYPE_DEFAULT="Standard"
+COM_GDPR_SELECT_TYPE_COOKIE="Cookie"
+COM_GDPR_SELECT_TYPE_LOCALSTORAGE="Local Speicher"
+COM_GDPR_SELECT_TYPE_SESSIONSTORAGE="Session Speicher"
+COM_GDPR_SELECT_TYPE_RESOURCE="Ressource"
+COM_GDPR_SELECT_TYPE_SCRIPT="Skript"
+COM_GDPR_SELECT_TYPE_INDEXEDDB="Indexed DB"
+COM_GDPR_SELECT_TYPE_CACHESTORAGE="Cache Speicher"
+COM_GDPR_SELECT_TYPE_ETAGS="ETags"
+COM_GDPR_SELECT_TYPE_SERVICEWORKER="Service Worker"
