--- a/language/de-DE.com_gdpr.ini
+++ b/language/de-DE.com_gdpr.ini
@@ -10,8 +10,8 @@ COM_GDPR_CLOSE_POPUP_TEXT="Schließen"
 COM_GDPR_COOKIE_LIST="Cookies in dieser Kategorie:"
 COM_GDPR_DOMAINS_LIST="Domains in dieser Kategorie:"
 COM_GDPR_SERVICES_LIST="Dienste in dieser Kategorie:"
-COM_GDPR_SERVICES_COOKIES_LIST="Cookies in dieses Dienstes:"
-COM_GDPR_SERVICES_DOMAINS_LIST="Domänen in dieses Dienstes:"
+COM_GDPR_SERVICES_COOKIES_LIST="Cookies dieses Dienstes:"
+COM_GDPR_SERVICES_DOMAINS_LIST="Domänen dieses Dienstes:"
 COM_GDPR_NONE="Keine"
 COM_GDPR_NO_COOKIE_IN_THIS_CATEGORY="Keine Cookies in dieser Kategorie"
 COM_GDPR_NO_DOMAINS_IN_THIS_CATEGORY="Keine Domains in dieser Kategorie"
